# visuals

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CivetServer.cpp  CivetServer.h  circle_effect.cpp  circle_effect.hpp  civetweb.c  color.hpp  color_maker.cpp  color_maker.hpp  color_utils.cpp  color_utils.hpp  effect.cpp  effect.hpp  effect_data.hpp  fill_effect.cpp  fill_effect.hpp  filled_circle_effect.cpp  filled_circle_effect.hpp  line_effect.cpp  line_effect.cpp~  line_effect.hpp  network.cpp  network.hpp  ocean_effect.cpp  ocean_effect.hpp  ox_src  plasma_effect.cpp  plasma_effect.hpp  raindrop_effect.cpp  raindrop_effect.hpp  rotation_effect.cpp  rotation_effect.hpp  sound.cpp  sound.hpp  stars_effect.cpp  stars_effect.hpp  visuals.cpp  (+4 more)
